force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/KimbleOne__MilestoneTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Milestone Template</label>
    <nameField>
        <label>Milestone Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>