force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__EndDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndDateOffset__c</fullName>
    <label>Duration (days)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>