force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__EventClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventClass__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Class</label>
    <referenceTo>KimbleOne__EventClass__c</referenceTo>
    <relationshipLabel>Milestone Templates</relationshipLabel>
    <relationshipName>MilestoneTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>