force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__MilestoneDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneDateOffset__c</fullName>
    <label>Milestone Date Offset</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>