force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__MilestoneDateOffsetType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneDateOffsetType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Date Offset Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>OffsetType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Milestone Templates (Milestone Date Offset Type)</relationshipLabel>
    <relationshipName>MilestoneTemplatesOffsetType</relationshipName>
    <type>Lookup</type>
</CustomField>