force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__MilestoneValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneValue__c</fullName>
    <label>Milestone Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>