force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__RequiresCompletionApproval__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RequiresCompletionApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Completion Approval</label>
    <type>Checkbox</type>
</CustomField>