force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__StartDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDateOffset__c</fullName>
    <label>Starts on Day #</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>