force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__StartOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartOffset__c</fullName>
    <label>Start Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>