force-app/main/default/objects/KimbleOne__MilestoneTemplate__c/fields/KimbleOne__VisibilityLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__VisibilityLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visibility</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Milestone Templates</relationshipLabel>
    <relationshipName>MilestoneTemplateVisibility</relationshipName>
    <type>Lookup</type>
</CustomField>